cmake_minimum_required(VERSION 2.8)

project(LeetCode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

MACRO(SETUP_SAMPLE_START EXE_NAME)
	UNSET(SOURCE_FILES)
	UNSET(HEADER_FILES)
	UNSET(RESOURCE_FILES)
	UNSET(EFFECT_FILES)
	UNSET(DEFINITIONS)
ENDMACRO(SETUP_SAMPLE_START)

MACRO(SETUP_SAMPLE_END EXE_NAME)
	SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
	SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
	SOURCE_GROUP("Resource Files" FILES ${RESOURCE_FILES})
	SOURCE_GROUP("Effect Files" FILES ${EFFECT_FILES})
	
	ADD_EXECUTABLE(${EXE_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} ${EFFECT_FILES})
ENDMACRO(SETUP_SAMPLE_END)

SETUP_SAMPLE_START(1_TwoSum)
	SET(SOURCE_FILES
		1_TwoSum.cpp
	)
SETUP_SAMPLE_END(1_TwoSum)

SETUP_SAMPLE_START(2_AddTwoNumbers)
	SET(SOURCE_FILES
		2_AddTwoNumbers.cpp
	)
SETUP_SAMPLE_END(2_AddTwoNumbers)

SETUP_SAMPLE_START(3_LongestSubstringWithoutRepeatingCharacters)
	SET(SOURCE_FILES
		3_LongestSubstringWithoutRepeatingCharacters.cpp
	)
SETUP_SAMPLE_END(3_LongestSubstringWithoutRepeatingCharacters)

SETUP_SAMPLE_START(4_MedianofTwoSortedArrays)
	SET(SOURCE_FILES
		4_MedianofTwoSortedArrays.cpp
	)
SETUP_SAMPLE_END(4_MedianofTwoSortedArrays)